Small fixes
Fixed mobile layout
Prevent background color flash on load
Fix scrollbar color

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -46,12 +46,13 @@ body {
 ::-webkit-scrollbar {
     height: 8px;
     width: 8px;
-    background: #1d2128;
+
+    background: var(--dimmed-background);
     border-radius: 4px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #373e47;
+    background: var(--element-background);
     border-radius: 4px;
 }
 
