--- a/src/styles/modules/Modal.module.scss
+++ b/src/styles/modules/Modal.module.scss
@@ -34,9 +34,8 @@
         padding: 0.5rem 2.3rem;
 
         overflow-y: auto;
-
         scrollbar-width: thin;
-        scrollbar-color: dark;
+        scrollbar-color: var(--element-background) var(--dimmed-background);
 
         box-sizing: border-box;
 
